--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,46 +1,70 @@
 # 2024-04-23
 
-共 200 条
+共 223 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 12:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 13:00:37 GMT+0800 (China Standard Time) -->
 1. [内蒙古通报干部下田拦春耕](https://so.toutiao.com/search?keyword=内蒙古通报干部下田拦春耕)
-1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
 1. [人民海军成立75周年](https://so.toutiao.com/search?keyword=人民海军成立75周年)
-1. [俄军精准打击乌电视塔](https://so.toutiao.com/search?keyword=俄军精准打击乌电视塔)
-1. [男子称关掉进水总阀水表仍在转](https://so.toutiao.com/search?keyword=男子称关掉进水总阀水表仍在转)
+1. [穆雷压哨绝杀！掘金惊险逆转湖人](https://so.toutiao.com/search?keyword=穆雷压哨绝杀！掘金惊险逆转湖人)
+1. [车位被霸占 协调未果后主人加护栏](https://so.toutiao.com/search?keyword=车位被霸占+协调未果后主人加护栏)
 1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [马来西亚两架直升机相撞坠毁致10死](https://so.toutiao.com/search?keyword=马来西亚两架直升机相撞坠毁致10死)
+1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [俄军精准打击乌电视塔](https://so.toutiao.com/search?keyword=俄军精准打击乌电视塔)
 1. [张勇宣布赠送周鸿祎哪吒汽车全家桶](https://so.toutiao.com/search?keyword=张勇宣布赠送周鸿祎哪吒汽车全家桶)
-1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
-1. [男生凌晨在家中多次徘徊后跳楼](https://so.toutiao.com/search?keyword=男生凌晨在家中多次徘徊后跳楼)
-1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
 1. [胖东来辟谣将在登封开店](https://so.toutiao.com/search?keyword=胖东来辟谣将在登封开店)
 1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
-1. [专家解读男孩被女同学父亲殴打](https://so.toutiao.com/search?keyword=专家解读男孩被女同学父亲殴打)
-1. [货车水泥管掉落砸中轿车致1死1伤](https://so.toutiao.com/search?keyword=货车水泥管掉落砸中轿车致1死1伤)
-1. [一条小团团斗鱼直播间尚未封禁](https://so.toutiao.com/search?keyword=一条小团团斗鱼直播间尚未封禁)
-1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
-1. [俄称美核武器若现波兰将被打击](https://so.toutiao.com/search?keyword=俄称美核武器若现波兰将被打击)
-1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
-1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
-1. [周杰伦问小孩哥怎么买到票的](https://so.toutiao.com/search?keyword=周杰伦问小孩哥怎么买到票的)
-1. [奶爸建议不要带6岁以下孩子旅行](https://so.toutiao.com/search?keyword=奶爸建议不要带6岁以下孩子旅行)
-1. [台湾花莲县发生6.0级地震](https://so.toutiao.com/search?keyword=台湾花莲县发生6.0级地震)
+1. [专家解读美国新的援乌法案](https://so.toutiao.com/search?keyword=专家解读美国新的援乌法案)
+1. [央媒评万吨粮凭空消失](https://so.toutiao.com/search?keyword=央媒评万吨粮凭空消失)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [高校禁挂床帘真能解决问题吗](https://so.toutiao.com/search?keyword=高校禁挂床帘真能解决问题吗)
 1. [李梦获WCBA总决赛FMVP](https://so.toutiao.com/search?keyword=李梦获WCBA总决赛FMVP)
-1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
-1. [海船擦碰佛山一大桥后沉没 4人失联](https://so.toutiao.com/search?keyword=海船擦碰佛山一大桥后沉没+4人失联)
-1. [薛之谦演唱会一个人来的女主发声](https://so.toutiao.com/search?keyword=薛之谦演唱会一个人来的女主发声)
-1. [女子看到乌镇一门牌不会读了](https://so.toutiao.com/search?keyword=女子看到乌镇一门牌不会读了)
 1. [雷军：小米汽车SU7锁单量已超7万台](https://so.toutiao.com/search?keyword=雷军：小米汽车SU7锁单量已超7万台)
-1. [媒体谈五一实际只放一天](https://so.toutiao.com/search?keyword=媒体谈五一实际只放一天)
+1. [保护核设施的伊朗防空系统雷达遭袭](https://so.toutiao.com/search?keyword=保护核设施的伊朗防空系统雷达遭袭)
 1. [美国警方身着防暴装备冲进耶鲁大学](https://so.toutiao.com/search?keyword=美国警方身着防暴装备冲进耶鲁大学)
+1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
+1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
+1. [一条小团团斗鱼直播间尚未封禁](https://so.toutiao.com/search?keyword=一条小团团斗鱼直播间尚未封禁)
+1. [台湾花莲地震震央往陆上移动](https://so.toutiao.com/search?keyword=台湾花莲地震震央往陆上移动)
+1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
+1. [专家称黄金并非短期投资品种](https://so.toutiao.com/search?keyword=专家称黄金并非短期投资品种)
+1. [美将制裁以军部队 以官员：美疯了](https://so.toutiao.com/search?keyword=美将制裁以军部队+以官员：美疯了)
+1. [珠江流域北江沿江树木道路被淹](https://so.toutiao.com/search?keyword=珠江流域北江沿江树木道路被淹)
+1. [中方谈布林肯访华 聚焦五大目标](https://so.toutiao.com/search?keyword=中方谈布林肯访华+聚焦五大目标)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
+1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
+1. [货车水泥管掉落砸中轿车致1死1伤](https://so.toutiao.com/search?keyword=货车水泥管掉落砸中轿车致1死1伤)
+1. [赖清德让3名陈水扁幕僚加入其团队](https://so.toutiao.com/search?keyword=赖清德让3名陈水扁幕僚加入其团队)
+1. [深圳全市进入暴雨戒备状态](https://so.toutiao.com/search?keyword=深圳全市进入暴雨戒备状态)
+1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
+1. [奶爸建议不要带6岁以下孩子旅行](https://so.toutiao.com/search?keyword=奶爸建议不要带6岁以下孩子旅行)
+1. [俄称美核武器若现波兰将被打击](https://so.toutiao.com/search?keyword=俄称美核武器若现波兰将被打击)
+1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
+1. [薛之谦演唱会一个人来的女主发声](https://so.toutiao.com/search?keyword=薛之谦演唱会一个人来的女主发声)
+1. [周鸿祎发布会上讽刺贾跃亭](https://so.toutiao.com/search?keyword=周鸿祎发布会上讽刺贾跃亭)
+1. [辽宁男篮距半决赛仅“一步之遥”](https://so.toutiao.com/search?keyword=辽宁男篮距半决赛仅“一步之遥”)
+1. [周杰伦问小孩哥怎么买到票的](https://so.toutiao.com/search?keyword=周杰伦问小孩哥怎么买到票的)
 1. [市委原书记被骗500万元背后](https://so.toutiao.com/search?keyword=市委原书记被骗500万元背后)
+1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
+1. [航拍北江、西江洪水交汇佛山三水](https://so.toutiao.com/search?keyword=航拍北江、西江洪水交汇佛山三水)
+1. [空袭伊朗能缓解以色列的多重困境吗](https://so.toutiao.com/search?keyword=空袭伊朗能缓解以色列的多重困境吗)
+1. [电车保费为什么贵](https://so.toutiao.com/search?keyword=电车保费为什么贵)
+1. [孕妇坠崖案当事人5年后重返事发地](https://so.toutiao.com/search?keyword=孕妇坠崖案当事人5年后重返事发地)
+1. [美众院对外援助法案提及台海](https://so.toutiao.com/search?keyword=美众院对外援助法案提及台海)
+1. [以军高官接连请辞 以政府持续承压](https://so.toutiao.com/search?keyword=以军高官接连请辞+以政府持续承压)
+1. [男子称关掉进水总阀水表仍在转](https://so.toutiao.com/search?keyword=男子称关掉进水总阀水表仍在转)
+1. [男生凌晨在家中多次徘徊后跳楼](https://so.toutiao.com/search?keyword=男生凌晨在家中多次徘徊后跳楼)
+1. [专家解读男孩被女同学父亲殴打](https://so.toutiao.com/search?keyword=专家解读男孩被女同学父亲殴打)
+1. [台湾花莲县发生6.0级地震](https://so.toutiao.com/search?keyword=台湾花莲县发生6.0级地震)
+1. [海船擦碰佛山一大桥后沉没 4人失联](https://so.toutiao.com/search?keyword=海船擦碰佛山一大桥后沉没+4人失联)
+1. [女子看到乌镇一门牌不会读了](https://so.toutiao.com/search?keyword=女子看到乌镇一门牌不会读了)
+1. [媒体谈五一实际只放一天](https://so.toutiao.com/search?keyword=媒体谈五一实际只放一天)
 1. [韶关商户称30年来未遇到如此暴雨](https://so.toutiao.com/search?keyword=韶关商户称30年来未遇到如此暴雨)
 1. [雷军：今年SU7交付目标超过10万辆](https://so.toutiao.com/search?keyword=雷军：今年SU7交付目标超过10万辆)
 1. [马龙孙颖莎在澳门地标拍摄冠军照](https://so.toutiao.com/search?keyword=马龙孙颖莎在澳门地标拍摄冠军照)
-1. [周鸿祎发布会上讽刺贾跃亭](https://so.toutiao.com/search?keyword=周鸿祎发布会上讽刺贾跃亭)
 1. [凤凰传奇演唱会堪比军训现场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会堪比军训现场)
-1. [深圳全市进入暴雨戒备状态](https://so.toutiao.com/search?keyword=深圳全市进入暴雨戒备状态)
 1. [周杰伦杭州演唱会创杭州纪录](https://so.toutiao.com/search?keyword=周杰伦杭州演唱会创杭州纪录)
 1. [台名嘴：大陆创新速度让人震惊](https://so.toutiao.com/search?keyword=台名嘴：大陆创新速度让人震惊)
 1. [季后赛：米切尔23+8 骑士2-0魔术](https://so.toutiao.com/search?keyword=季后赛：米切尔23+8+骑士2-0魔术)
@@ -49,7 +73,6 @@
 1. [老公回家进门一句话听懵妻子](https://so.toutiao.com/search?keyword=老公回家进门一句话听懵妻子)
 1. [“101计划”意味着仍是理工科天下吗](https://so.toutiao.com/search?keyword=“101计划”意味着仍是理工科天下吗)
 1. [捷途今年销量目标超过50万辆](https://so.toutiao.com/search?keyword=捷途今年销量目标超过50万辆)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [成耀东：中国国奥赶上了亚洲水平](https://so.toutiao.com/search?keyword=成耀东：中国国奥赶上了亚洲水平)
 1. [台积电：地震暂未影响工厂运营](https://so.toutiao.com/search?keyword=台积电：地震暂未影响工厂运营)
 1. [许美静团队回应演唱会被喊退票](https://so.toutiao.com/search?keyword=许美静团队回应演唱会被喊退票)
