--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,44 +1,64 @@
 # 2024-04-23
 
-共 262 条
+共 277 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 15:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 16:00:41 GMT+0800 (China Standard Time) -->
 1. [村支书回应种地先交钱：县里让收的](https://so.toutiao.com/search?keyword=村支书回应种地先交钱：县里让收的)
-1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
+1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
 1. [人民海军成立75周年](https://so.toutiao.com/search?keyword=人民海军成立75周年)
 1. [内蒙古通报干部下田拦春耕](https://so.toutiao.com/search?keyword=内蒙古通报干部下田拦春耕)
 1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [女孩体考完身体不适 家长：学业繁重](https://so.toutiao.com/search?keyword=女孩体考完身体不适+家长：学业繁重)
+1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
 1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
-1. [高校禁挂床帘真能解决问题吗](https://so.toutiao.com/search?keyword=高校禁挂床帘真能解决问题吗)
-1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
-1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
-1. [胖东来辟谣将在登封开店](https://so.toutiao.com/search?keyword=胖东来辟谣将在登封开店)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
-1. [穆雷压哨绝杀湖人](https://so.toutiao.com/search?keyword=穆雷压哨绝杀湖人)
-1. [丈夫只做自己饭 妻子抱娃心寒问话](https://so.toutiao.com/search?keyword=丈夫只做自己饭+妻子抱娃心寒问话)
 1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
-1. [常州副市长抖音往日视频被赞接地气](https://so.toutiao.com/search?keyword=常州副市长抖音往日视频被赞接地气)
-1. [女生质疑体考被压表大闹考场](https://so.toutiao.com/search?keyword=女生质疑体考被压表大闹考场)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [胖东来辟谣将在登封开店](https://so.toutiao.com/search?keyword=胖东来辟谣将在登封开店)
+1. [百万网红被曝北电艺考作弊](https://so.toutiao.com/search?keyword=百万网红被曝北电艺考作弊)
 1. [家长堵住男孩教唆自己孩子动手打人](https://so.toutiao.com/search?keyword=家长堵住男孩教唆自己孩子动手打人)
-1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
-1. [美国警方身着防暴装备冲进耶鲁大学](https://so.toutiao.com/search?keyword=美国警方身着防暴装备冲进耶鲁大学)
-1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
-1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
-1. [美国多所大学爆发支持巴勒斯坦抗议](https://so.toutiao.com/search?keyword=美国多所大学爆发支持巴勒斯坦抗议)
-1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [高校禁挂床帘真能解决问题吗](https://so.toutiao.com/search?keyword=高校禁挂床帘真能解决问题吗)
 1. [马来西亚两架直升机相撞坠毁致10死](https://so.toutiao.com/search?keyword=马来西亚两架直升机相撞坠毁致10死)
+1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
+1. [穆雷压哨绝杀湖人](https://so.toutiao.com/search?keyword=穆雷压哨绝杀湖人)
+1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
+1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [男子康师傅方便面里吃出铁钉](https://so.toutiao.com/search?keyword=男子康师傅方便面里吃出铁钉)
+1. [黄金白银下挫 A股黄金股集体盘整](https://so.toutiao.com/search?keyword=黄金白银下挫+A股黄金股集体盘整)
+1. [各国军官呼吁南海周边国家保持沟通](https://so.toutiao.com/search?keyword=各国军官呼吁南海周边国家保持沟通)
+1. [英公司：美针对伊朗只会停留在纸面](https://so.toutiao.com/search?keyword=英公司：美针对伊朗只会停留在纸面)
+1. [俄媒：俄乌冲突或于五月迎来新升级](https://so.toutiao.com/search?keyword=俄媒：俄乌冲突或于五月迎来新升级)
+1. [女生质疑体考被压表大闹考场](https://so.toutiao.com/search?keyword=女生质疑体考被压表大闹考场)
+1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [俄军精准打击乌电视塔](https://so.toutiao.com/search?keyword=俄军精准打击乌电视塔)
+1. [美国多所大学爆发支持巴勒斯坦抗议](https://so.toutiao.com/search?keyword=美国多所大学爆发支持巴勒斯坦抗议)
+1. [央媒：以消防为由禁挂床帘说不通](https://so.toutiao.com/search?keyword=央媒：以消防为由禁挂床帘说不通)
+1. [游客景区偷拔19根竹笋遭索罚2600元](https://so.toutiao.com/search?keyword=游客景区偷拔19根竹笋遭索罚2600元)
+1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
 1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [专家：平衡外交已成韩国“刚需”](https://so.toutiao.com/search?keyword=专家：平衡外交已成韩国“刚需”)
+1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
 1. [官方回应高速不按规定保持车距被罚](https://so.toutiao.com/search?keyword=官方回应高速不按规定保持车距被罚)
-1. [杨幂秦昊新剧首播收视率破0.3](https://so.toutiao.com/search?keyword=杨幂秦昊新剧首播收视率破0.3)
-1. [孕妇坠崖案当事人5年后重返事发地](https://so.toutiao.com/search?keyword=孕妇坠崖案当事人5年后重返事发地)
 1. [专家建议毕业生第一年工资由政府发](https://so.toutiao.com/search?keyword=专家建议毕业生第一年工资由政府发)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [斗鱼回应“PDD已停播超5个月”](https://so.toutiao.com/search?keyword=斗鱼回应“PDD已停播超5个月”)
+1. [台湾东岸彻夜发生80多次地震](https://so.toutiao.com/search?keyword=台湾东岸彻夜发生80多次地震)
+1. [孕妇坠崖案当事人5年后重返事发地](https://so.toutiao.com/search?keyword=孕妇坠崖案当事人5年后重返事发地)
+1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
+1. [杨幂秦昊新剧首播收视率破0.3](https://so.toutiao.com/search?keyword=杨幂秦昊新剧首播收视率破0.3)
+1. [本轮巴以冲突已致加沙34151人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致加沙34151人死亡)
+1. [台媒：美国有意搅乱台海 居心叵测](https://so.toutiao.com/search?keyword=台媒：美国有意搅乱台海+居心叵测)
+1. [布林肯中国行将到访北京上海两地](https://so.toutiao.com/search?keyword=布林肯中国行将到访北京上海两地)
+1. [货车水泥管掉落砸中轿车致1死1伤](https://so.toutiao.com/search?keyword=货车水泥管掉落砸中轿车致1死1伤)
+1. [丈夫只做自己饭 妻子抱娃心寒问话](https://so.toutiao.com/search?keyword=丈夫只做自己饭+妻子抱娃心寒问话)
+1. [常州副市长抖音往日视频被赞接地气](https://so.toutiao.com/search?keyword=常州副市长抖音往日视频被赞接地气)
+1. [美国警方身着防暴装备冲进耶鲁大学](https://so.toutiao.com/search?keyword=美国警方身着防暴装备冲进耶鲁大学)
 1. [小猩猩因单独圈养抑郁？园区回应](https://so.toutiao.com/search?keyword=小猩猩因单独圈养抑郁？园区回应)
 1. [深圳全市进入暴雨戒备状态](https://so.toutiao.com/search?keyword=深圳全市进入暴雨戒备状态)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [景区回应猴子被摸屁股咬伤游客](https://so.toutiao.com/search?keyword=景区回应猴子被摸屁股咬伤游客)
 1. [学校禁止学生挂床帘是权力越界吗](https://so.toutiao.com/search?keyword=学校禁止学生挂床帘是权力越界吗)
 1. [中方谈布林肯访华 聚焦五大目标](https://so.toutiao.com/search?keyword=中方谈布林肯访华+聚焦五大目标)
@@ -47,18 +67,14 @@
 1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
 1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
 1. [曝蔚来“截胡”小米SU7](https://so.toutiao.com/search?keyword=曝蔚来“截胡”小米SU7)
-1. [男子康师傅方便面里吃出铁钉](https://so.toutiao.com/search?keyword=男子康师傅方便面里吃出铁钉)
-1. [斗鱼回应“PDD已停播超5个月”](https://so.toutiao.com/search?keyword=斗鱼回应“PDD已停播超5个月”)
 1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
 1. [24日夜间起华南地区雨势将再加强](https://so.toutiao.com/search?keyword=24日夜间起华南地区雨势将再加强)
 1. [券商：关注石油石化等资源板块](https://so.toutiao.com/search?keyword=券商：关注石油石化等资源板块)
 1. [欧盟举办会议聚焦援乌议题](https://so.toutiao.com/search?keyword=欧盟举办会议聚焦援乌议题)
-1. [黄金白银下挫 A股黄金股集体盘整](https://so.toutiao.com/search?keyword=黄金白银下挫+A股黄金股集体盘整)
 1. [央媒评万吨粮凭空消失](https://so.toutiao.com/search?keyword=央媒评万吨粮凭空消失)
 1. [穆雷压哨绝杀！掘金惊险逆转湖人](https://so.toutiao.com/search?keyword=穆雷压哨绝杀！掘金惊险逆转湖人)
 1. [车位被霸占 协调未果后主人加护栏](https://so.toutiao.com/search?keyword=车位被霸占+协调未果后主人加护栏)
 1. [台湾花莲地震震央往陆上移动](https://so.toutiao.com/search?keyword=台湾花莲地震震央往陆上移动)
-1. [货车水泥管掉落砸中轿车致1死1伤](https://so.toutiao.com/search?keyword=货车水泥管掉落砸中轿车致1死1伤)
 1. [雷军：小米汽车SU7锁单量已超7万台](https://so.toutiao.com/search?keyword=雷军：小米汽车SU7锁单量已超7万台)
 1. [一条小团团斗鱼直播间尚未封禁](https://so.toutiao.com/search?keyword=一条小团团斗鱼直播间尚未封禁)
 1. [张勇宣布赠送周鸿祎哪吒汽车全家桶](https://so.toutiao.com/search?keyword=张勇宣布赠送周鸿祎哪吒汽车全家桶)
@@ -70,7 +86,6 @@
 1. [马斯克超级赌注：全力量产Robotaxi](https://so.toutiao.com/search?keyword=马斯克超级赌注：全力量产Robotaxi)
 1. [周鸿祎发布会上讽刺贾跃亭](https://so.toutiao.com/search?keyword=周鸿祎发布会上讽刺贾跃亭)
 1. [台湾余震不断 居民睡车后备箱](https://so.toutiao.com/search?keyword=台湾余震不断+居民睡车后备箱)
-1. [布林肯中国行将到访北京上海两地](https://so.toutiao.com/search?keyword=布林肯中国行将到访北京上海两地)
 1. [专家：台湾民众要反对“台独”](https://so.toutiao.com/search?keyword=专家：台湾民众要反对“台独”)
 1. [美将制裁以军部队？以方各派猛批](https://so.toutiao.com/search?keyword=美将制裁以军部队？以方各派猛批)
 1. [奶爸建议不要带6岁以下孩子旅行](https://so.toutiao.com/search?keyword=奶爸建议不要带6岁以下孩子旅行)
